# sec-capsules

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: agent-benchmark.yml  ci.yml  e2e-crapi-ffuf.yml  e2e-crapi-nmap.yml  e2e-local.yml
benchmarks/: __init__.py  adapters.py  agent.py  cli.py  models.py  providers.py  reporting.py  scoring.py
benchmarks/scenarios/: crapi-approval.yml  crapi-recon-replay.yml  crapi-scope.yml
benchmarks/schemas/: agent_trace.v1.json
docs/: CAPSULE_SPEC.md  MCP_META_TOOLS.md  ROADMAP.md  SELF_HOSTED_RUNNER.md  V0.1.1_EXECUTION_GATE.md  V0.1_SPEC.md
docs/zh-CN/: PROJECT_BRIEF.md  V0.1.1_开发者手册.md  V0.1.2_开发者手册.md  V0.2.0a1_开发者手册.md  V0.2.0a2_Agent基准开发者手册.md
evals/: README.md
evals/candidates/reference/: katana-shallow.json  nmap-crapi-services.json  nuclei-critical.json
evals/scenarios/: katana-shallow.yml  nmap-crapi-services.yml  nuclei-critical.yml
examples/: approval.example.yml
examples/crapi-local/: approval.yml  scope.yml
examples/fixtures/: nuclei-observation.json
examples/juice-shop-local/: compose.yml  scope.yml
scripts/: benchmark-agent.sh  ci.sh  e2e-crapi-ffuf.sh  e2e-crapi-nmap.sh  e2e-local.sh
src/sec_capsules/: __init__.py
tests/: test_agent_benchmark.py  test_arguments.py  test_artifacts.py  test_capsule_conformance.py  test_cli.py  test_evals.py  test_executor.py  test_mcp_server.py  test_observation.py  test_parsers.py  test_recipe.py  test_registry.py  test_runner.py  test_scope.py  test_siliconflow.py  test_version.py
(+56 files in other folders)
